# bamboo

./: .editorconfig  .env  .env.template  .flaskenv  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yaml  dockerfile  pyproject.toml  requirements.txt
.github/workflows/: backend.yml  docker.yml  frontend.yml  release.yml
backend/: .flaskenv  app.py
backend/bamboo/: __init__.py  jobs.py  models.py  settings.py  ssg.py  utils.py
backend/bamboo/blueprints/: __init__.py  admin.py  auth.py  blog.py  city.py  command.py  error.py  media.py  organization.py  page.py  partnership.py  root.py  schedule_item.py  site.py  ssg.py  staff.py  talk.py  venue.py
backend/bamboo/core/: commands.py  extensions.py
backend/bamboo/database/: __init__.py  models.py
backend/bamboo/forms/: media.py
backend/bamboo/schemas/: auth.py  city.py  media.py  organization.py  partnership.py  schedule_item.py  site.py  staff.py  talk.py  venue.py
backend/bamboo/ssg/: __init__.py  core.py  template.py  views.py
backend/bamboo/views/: auth.py  blog.py  talk.py
backend/tests/: conftest.py  test_basics.py  test_media.py  test_organization.py  test_partnership.py  test_site.py  test_ssg.py  test_utils.py
backend/tests/blueprints/: conftest.py  test_auth.py  test_city.py  test_site.py  test_staff.py
backend/tests/models/: conftest.py  test_city.py  test_organization.py  test_partnership.py  test_schedule_item.py  test_talks.py  test_users.py  test_venue.py  utils.py
backend/tests/ssg/: conftest.py  test_job.py  test_pack.py  test_render.py  test_views.py
backend/tests/ssg/template_example/: index.html  layout.html
backend/tests/ssg/template_example/static/: script.js
data/: .gitignore
frontend/: .env  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts  routes.ts  schema.ts  types.d.ts
frontend/src/api/: fetcher.ts  site.ts  user.ts
frontend/src/components/: Link.vue  ProtectedLayout.vue  User.vue
frontend/src/lib/: states.ts
frontend/src/views/login/: LoginForm.vue  index.vue
scripts/: entrypoint.sh
